2005-11-29  Keith Marshall  <keithmarshall@users.sourceforge.net>

        Adapt to parse new SF project files page format.

        * mkRelease.tcl: Add comments throughout.
          (DebugMode, Record_Begin_Tag, Record_End_Tag, Package_ID_Tag,
           Release_ID_Tag): New global variables.
          (process_current_files_page): Procedure redefined, in terms of...
          (debugging, seek_ftp_files_list, catalogue_all_files,
           get_HTML_tagged_record, get_first_package_list_entry,
           get_next_package_list_entry, get_package_list_entry_data,
           get_released_file_type, catalogue_file_releases,
           construct_release_table): New procedures.
          (delete_work_file): Procedure renamed...
          (delete_working_files): ...to this.
          (main): Procedure removed; body content elevated to top level.

2005-06-09  Earnie Boyd  <earnie@users.sf.net>

	* ChangeLog: New file.
	* mkRelease.tcl: Updated for SF change to Files page.