@@ -1,3 +1,8 @@
+2006-02-16  Earnie Boyd  <earnie@users.sf.net>
+
+	* mkRelease.tcl (get_current_files_page): Use multiple downloads per
+	package release to get all the release data due to SF changes.
+
 2005-11-29  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
         Adapt to parse new SF project files page format.
